Changes for 1.5
* Phase 2 of abstraction and refactoring of TriggerAttachments: now all triggers get called through a single method, collectAndFireTriggers. (veqryn)

* Created getAllConditionsRecursive and testAllConditions which will test get and test all IConditions, and now all RulesAttachments get tested through these. (veqryn)

* Had RulesAttachment, TriggerAttachment, and PoliticalActionAttachment all implement IConditions. (veqryn)

* Created IConditions, and interface for any Attachment that had conditions as a part of it. (veqryn)

* Moved actions for victory trigger and notification trigger to be part of the trigger attachment so that they will return void, and therefore can abstract easier. (veqryn)

* Deprecating TriggerAttachments "trigger", and changing name to "conditions" in order to match the other uses of condition attachments. (veqryn)

* Phase 1 of abstraction of TriggerAttachments, creation of AbstractTriggerAttachment. (frigoref)

* Fixed bug where I could move my tanks and all land units over water, so long as the end was land. (veqryn)

* Allowed players with canTakeOverOwnedTerritory to take over during noncombat move. (veqryn)

* Created new relationship type attachment, canTakeOverOwnedTerritory, which will allow taking over of an ally's territory. (veqryn) 

* Fixing gamenotes for Lord of the Rings Middle Earth. (veqryn)

* Created new relationship type attachment, canLandAirUnitsOnOwnedLand, which decides if units can land in a player's territory or not. (veqryn) 

* New Map Skin for Napoleonic Empires, which can be enabled in the View menu. (pulicat)

* Changed BattleModel to show air battle units with different stats then their normal attack/defense stats. (veqryn)

* Made sure units participating in air battles did not participate in any other battles. (veqryn)

* Created launching of interceptors component for air battles. (veqryn)

* Created dice rolling component for Strategic Bombing Air Battles, including for Low Luck. (veqryn)