@@ -1,4 +1,6 @@
 Changes for 1.5
+* Fixing null pointer errors and conceptual problems with my way of testing all conditions. (veqryn)
+
 * Phase 2 of abstraction and refactoring of TriggerAttachments: now all triggers get called through a single method, collectAndFireTriggers. (veqryn)
 
 * Created getAllConditionsRecursive and testAllConditions which will test get and test all IConditions, and now all RulesAttachments get tested through these. (veqryn)
